@@ -1,3 +1,7 @@
+1998-12-22  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* activity.h (ActionType): Remove activate:.
+
 1998-12-22  Vladimir Jojic  <vjojic@wijiji.santafe.edu>
 
 	* CompoundAction.m ([CompoundAction_c -_createActivity_:::]): 
@@ -40,8 +44,6 @@
 
 	* ActionGroup.h (ActionGroup_c): Implement ActionGroup protocol.
 	(ForEachActivity_c): Implement ForEachActivity protocol.
-
-	* Makefile.am (Schedule.lo ActionGroup.lo): Depend on CompoundAction.m.
 
 1998-12-17  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
